--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bootstrap-icons": "^1.11.3",
     "preact": "^10.22.1",
     "react-bootstrap": "^2.10.4",
+    "react-responsive-masonry": "^2.3.0",
     "sweetalert2": "^11.12.3",
     "wouter": "^3.3.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.3",
+    "@types/react-responsive-masonry": "^2.1.3",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
