--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,8 +19,23 @@
       "react-dom": [
         "./node_modules/preact/compat/"
       ],
-      "@/*": [
-        "src/*"
+      "@assets/*": [
+        "./src/assets/*"
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@interfaces/*": [
+        "./src/interfaces/*"
+      ],
+      "@contexts/*": [
+        "./src/contexts/*"
+      ],
+      "@pages/*": [
+        "./src/pages/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
       ]
     },
     /* Bundler mode */
