--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@types/node": "^22.5.1",
-    "axios": "^1.7.5",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dayjs": "^1.11.13",
     "preact": "^10.23.2",
     "react-bootstrap": "^2.10.4",
-    "react-responsive-masonry": "^2.3.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "sweetalert2": "^11.12.4",
     "wouter": "^3.3.5"
   },
