--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "preact": "^10.23.2",
     "react-bootstrap": "^2.10.4",
     "react-lazy-load-image-component": "^1.6.2",
-    "sweetalert2": "^11.12.4",
-    "wouter": "^3.3.5"
+    "react-router-dom": "^6.26.1",
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.0",
