--- a/package.json
+++ b/package.json
@@ -11,22 +11,19 @@
   "dependencies": {
     "@fontsource-variable/manrope": "^5.1.0",
     "@fontsource/poppins": "^5.1.0",
-    "@glidejs/glide": "^3.6.2",
-    "@types/node": "^22.5.1",
-    "@types/react-lazy-load-image-component": "^1.6.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dayjs": "^1.11.13",
     "preact": "^10.23.2",
     "react-bootstrap": "^2.10.4",
     "react-lazy-load-image-component": "^1.6.2",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
     "sweetalert2": "^11.12.4",
-    "swiper": "^11.1.14",
-    "whatsapp-web.js": "^1.25.0"
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
+    "@types/node": "^22.5.1",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@preact/preset-vite": "^2.9.0",
     "@types/react-responsive-masonry": "^2.1.3",
     "typescript": "^5.5.4",
