--- a/package.json
+++ b/package.json
@@ -9,24 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource-variable/manrope": "^5.1.0",
+    "@fontsource-variable/nunito": "^5.1.0",
     "@fontsource/poppins": "^5.1.0",
+    "@solidjs/router": "^0.15.1",
+    "@unlazy/solid": "^0.12.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "dayjs": "^1.11.13",
-    "preact": "^10.23.2",
-    "react-bootstrap": "^2.10.4",
-    "react-lazy-load-image-component": "^1.6.2",
-    "react-router-dom": "^6.26.1",
-    "sweetalert2": "^11.12.4",
-    "swiper": "^11.1.14"
+    "solid-bootstrap": "^1.0.20",
+    "solid-js": "^1.9.3",
+    "sweetalert2": "^11.14.5",
+    "swiper": "^11.1.15",
+    "unlazy": "^0.12.0"
   },
   "devDependencies": {
-    "@types/node": "^22.5.1",
-    "@types/react-lazy-load-image-component": "^1.6.4",
-    "@preact/preset-vite": "^2.9.0",
-    "@types/react-responsive-masonry": "^2.1.3",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.2"
+    "vite-plugin-solid": "^2.10.2",
+    "typescript": "~5.6.3",
+    "vite": "^5.4.11"
   }
 }
