--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@fontsource-variable/nunito": "^5.1.0",
-    "@fontsource/poppins": "^5.1.0",
     "@solidjs/router": "^0.15.1",
+    "@tabler/icons-solidjs": "^3.22.0",
     "@unlazy/solid": "^0.12.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -22,8 +22,9 @@
     "unlazy": "^0.12.0"
   },
   "devDependencies": {
-    "vite-plugin-solid": "^2.10.2",
+    "@types/node": "^22.9.3",
     "typescript": "~5.6.3",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "vite-plugin-solid": "^2.10.2"
   }
 }
